# rpp

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: mkdocs.yml
docs/docs/: index.md
models/: rf_tuned_model_best_params.txt  rf_tuned_model_cv_results.csv
notebooks/: eda.ipynb  process.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
rice_price_prediction/: __init__.py  dataset.py  features.py  plots.py
rice_price_prediction/api/: main.py  save_model.py  test.py
rice_price_prediction/modeling/: predict.py  train.py  tune_rf.py
