[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rice_price_prediction"
version = "0.0.1"
description = "ML Model to predict rice price in a given region based on historic prices"
authors = [
  { name = "Hudeyfa Jama" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "xgboost>=3.1.1",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["rice_price_prediction"]
include = ["pyproject.toml", "rice_price_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rice_price_prediction"]
force-sort-within-sections = true

